Wed Apr  9 10:21:16 UTC 2014  Phil Mesnier  <mesnier_p@socket.net>

        * bin/tao_orb_tests.lst:
          Too many n's.

Wed Apr  9 09:16:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/Hello_i.h:
        * tests/Bug_3853_Regression/Hello_i.cpp:
        * tests/Bug_3853_Regression/client_interceptor.cpp:
        * tests/Bug_3853_Regression/run_test.pl:
        * tests/Bug_3853_Regression/server.cpp:
          Layout changes

Tue Apr  8 17:55:52 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DiffServ/client.cpp:
        * tests/DiffServ/server.cpp:
          Shutdown orb/poa to fix valgrind reported memory leaks

Tue Apr  8 17:19:07 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3953_Regression/client.cpp:
        * tests/Bug_3953_Regression/server.cpp:
          Shutdown the ORB to fix valgrind reported memory leaks

        * tests/Bug_3953_Regression/run_test.pl:
          Copy svc.conf file to the targets

Mon Apr  7 22:24:44 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Dynamic_TP/DTP_Thread_Pool.h:
        * tao/Dynamic_TP/DTP_Thread_Pool.cpp:
          Added synchronization between the requester of new threads and
          the and the newly spawned threads. This deals with a situation
          where a heavily loaded machine takes a relatively long time to
          activate a new thread allowing the requesting thread to spin,
          repeatedly requesting more threads, perhaps 100s more.

          The loop in question is part of the new test added to the
          leader-follower wait strategy right before a client thread is
          forced to become client leader. Although there is a thread yield
          there, apparently that still isn't enough to ensure a new thread
          is created to become the leader first.
